# Silatra

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Different Model Comparisons.ipynb  FeatureDetectionSIFT.py  ImgReceiver.py  KNNModelDump.sav  LoadSavedModel.py  Makefile  Preferences  Preferences.bad  README.md  Random Forest Implementation.ipynb  SiLaTra  SiLaTra.cpp  TestSampleDistancesData.csv  Untitled.ipynb  builder.sh  calcSizeOfDataset.py  cmake_install.cmake  copy this to change your prompt.txt  data.csv  desktop.ini  do_pca_and_tsne_transform.py  getMeSomeResultsInPythonBro.py  kNNTrial.py  machineid  merger.py  norm_data.csv  objectDetection.cpp  setup.py  skinDetection.cpp  skin_detector.py  storage.json  test.py  test2.avi  testThisSampleInPython.py  test_data.csv  totalData.csv  (+3 more)
.ipynb_checkpoints/: Different Model Comparisons-checkpoint.ipynb
APKs/: Silatra_13_July_2018_Signed.apk  Silatra_6_July_2018_Signed.apk  Silatra_Sings_Only.apk
Archived Codes/: README.md
Backups/: workspaces.json
CNN/: CNN-trial.py  live-test-CNN.py
Cache/: data_0  data_1  index
Classification Models/: DigitClassifierModel.h5  DigitClassifierModel.json
Documentation/: Kartik Progress.txt
Files found Online/: skinDetection online.cpp
GPUCache/: data_1  index
Gesture Videos/: Symbol String.txt
Gesture recognition/: Hand sign classification using Fragmentation.ipynb  ImgReceiver.py  [OLD] gesture_data.csv  feature_extractor.py  filter_time_series.py  gesture_classify.py  gesture_data.csv  gesture_signs_select.sav  hmm.py  realtime_testing.py  record.py  test.avi  test3.avi  track_hands.py  utils.py
Gesture recongition/: good afternoon.avi  record.py
GetMyContours/: getMyContours.cpp  getMyContours.hpp  (+2 more)
PythonInterfacingTrial/: CMakeLists.txt  PythonToOCV.h  builder.sh  c++script.cpp  cv_cpp_py_interface.cpp  pythonscript.py  skin_detector.py
PythonInterfacingTrial/Archived/: PythonToOCV.cpp
SilatraCPP_OG/GetMyHand/PythonScriptImagePassingHandlers/: CMakeLists.txt  builder.sh  cv_cpp_py_interface.h  detect.py
(+488 files in other folders)
