cmake_minimum_required(VERSION 2.8)
project( SiLaTra )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( SiLaTra SiLaTra.cpp ./GetMyContours/getMyContours.cpp ./GetMyContours/skinColorSegmentation.cpp)
target_link_libraries( SiLaTra ${OpenCV_LIBS} )
